<resources>
    <string name="app_name">Move2Live</string>

    <string name="action_settings">Settings</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="auth_failed_email">Username or email wrong</string>

    <string name="facebook_app_id">272421549856711</string>
    <!-- if your App ID is 1234567, you should use fb1234567 -->
    <string name="fb_login_protocol_scheme">fb272421549856711</string>

    <!-- keys to profile id and photo -->
    <string name="preference_file_key">preference_key_user</string>
    <string name="preference_username">pref_username</string>
    <string name="preference_photo_url">pref_photo_url</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <!-- navigation strings for nav drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_community">Community</string>
    <string name="nav_menu_objectives">Objectives</string>
    <string name="nav_menu_blog">My Blog</string>
    <string name="nav_menu_about">About Us</string>

    <!--- Login string values -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_login_google">Sign In with Google</string>
    <string name="btn_login_facebook">Sign In with Facebook</string>
    <string name="btn_link_to_register">Do not have an account? Create Account.</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!---Accessibility strings #a11y -->
    <string name="a11y_logo_description">Move2Live Logo</string>
</resources>
