<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_menu_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_action_community"
            android:title="@string/nav_menu_community"/>
        <item
            android:id="@+id/nav_objectives"
            android:icon="@drawable/ic_objectives"
            android:title="@string/nav_menu_objectives" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/nav_menu_blog" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_menu_about" />
    </group>

</menu>
